# segway_ros2

./: .gitignore  LICENSE  README.md
install/: local_setup.sh  setup.sh
install/segway_msgs/include/segway_msgs/segway_msgs/action/: ros_set_iap_cmd.h  ros_set_iap_cmd.hpp
install/segway_msgs/include/segway_msgs/segway_msgs/msg/: bmsfb.h  bmsfb.hpp  chassisctrlsrcfb.h  chassisctrlsrcfb.hpp  chassismileagemeterfb.h  chassismileagemeterfb.hpp  chassismodefb.h  chassismodefb.hpp  errorcodefb.h  errorcodefb.hpp  motorworkmodefb.h  motorworkmodefb.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  speedfb.h  speedfb.hpp  ticksfb.h  ticksfb.hpp
install/segway_msgs/include/segway_msgs/segway_msgs/srv/: chassis_send_event.h  chassis_send_event.hpp  ros_clear_chassis_error_code_cmd.h  ros_clear_chassis_error_code_cmd.hpp  ros_enable_chassis_rotate_cmd.h  ros_enable_chassis_rotate_cmd.hpp  ros_get_chassis_rotate_switch_cmd.h  ros_get_chassis_rotate_switch_cmd.hpp  ros_get_chassis_sn_cmd.h  ros_get_chassis_sn_cmd.hpp  ros_get_host_and_chassis_match_cmd.h  ros_get_host_and_chassis_match_cmd.hpp  ros_get_load_param_cmd.h  ros_get_load_param_cmd.hpp  ros_get_rotate_function_cfg_cmd.h  ros_get_rotate_function_cfg_cmd.hpp  ros_get_sw_version_cmd.h  ros_get_sw_version_cmd.hpp  ros_get_vel_max_feedback_cmd.h  ros_get_vel_max_feedback_cmd.hpp  ros_reset_host_power_cmd.h  ros_reset_host_power_cmd.hpp  ros_set_cfg_rotate_function_cmd.h  ros_set_cfg_rotate_function_cmd.hpp  ros_set_chassis_buzzer_cmd.h  (+15 more)
install/segway_msgs/share/segway_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/segway_msgs/share/segway_msgs/action/: RosSetIapCmd.action  RosSetIapCmd.idl
install/segway_msgs/share/segway_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_segway_msgs__rosidl_generator_cExport-noconfig.cmake  export_segway_msgs__rosidl_generator_cExport.cmake  export_segway_msgs__rosidl_generator_cppExport.cmake  export_segway_msgs__rosidl_generator_pyExport-noconfig.cmake  export_segway_msgs__rosidl_generator_pyExport.cmake  export_segway_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_segway_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_segway_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_segway_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  segway_msgsConfig.cmake  segway_msgs__rosidl_typesupport_cExport-noconfig.cmake  segway_msgs__rosidl_typesupport_cExport.cmake  segway_msgs__rosidl_typesupport_cppExport-noconfig.cmake  segway_msgs__rosidl_typesupport_cppExport.cmake  segway_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  segway_msgs__rosidl_typesupport_introspection_cExport.cmake  segway_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  segway_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/segway_msgs/share/segway_msgs/msg/: Bmsfb.idl  Chassisctrlsrcfb.idl  Chassismileagemeterfb.idl  Chassismodefb.idl  Errorcodefb.idl  Motorworkmodefb.idl  Speedfb.idl  Ticksfb.idl
install/segway_msgs/share/segway_msgs/srv/: ChassisSendEvent.idl  ChassisSendEvent_Request.msg  ChassisSendEvent_Response.msg  RosClearChassisErrorCodeCmd.idl  RosClearChassisErrorCodeCmd_Request.msg  RosClearChassisErrorCodeCmd_Response.msg  RosEnableChassisRotateCmd.idl  RosEnableChassisRotateCmd.srv  RosEnableChassisRotateCmd_Request.msg  RosEnableChassisRotateCmd_Response.msg  RosGetChassisRotateSwitchCmd.idl  RosGetChassisRotateSwitchCmd_Request.msg  RosGetChassisRotateSwitchCmd_Response.msg  RosGetChassisSnCmd.idl  RosGetChassisSnCmd.srv  RosGetChassisSnCmd_Request.msg  RosGetChassisSnCmd_Response.msg  RosGetHostAndChassisMatchCmd.idl  RosGetHostAndChassisMatchCmd_Response.msg  RosGetLoadParamCmd.idl  RosGetLoadParamCmd_Request.msg  RosGetLoadParamCmd_Response.msg  RosGetRotateFunctionCfgCmd.idl  RosGetRotateFunctionCfgCmd.srv  RosGetRotateFunctionCfgCmd_Request.msg  RosGetRotateFunctionCfgCmd_Response.msg  RosGetSwVersionCmd.idl  RosGetSwVersionCmd_Request.msg  RosGetSwVersionCmd_Response.msg  RosGetVelMaxFeedbackCmd.idl  RosGetVelMaxFeedbackCmd.srv  RosGetVelMaxFeedbackCmd_Request.msg  RosGetVelMaxFeedbackCmd_Response.msg  RosResetHostPowerCmd.idl  RosResetHostPowerCmd_Request.msg  RosResetHostPowerCmd_Response.msg  RosSetCfgRotateFunctionCmd.idl  RosSetCfgRotateFunctionCmd_Request.msg  RosSetCfgRotateFunctionCmd_Response.msg  RosSetChassisBuzzerCmd.idl  (+26 more)
install/segwayrmp/share/segwayrmp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
segway_description/: CMakeLists.txt  package.xml
segway_description/launch/: display.launch  display.launch.py  gazebo.launch
segway_description/meshes/: zhuanxiangjia_Link.STL
segway_description/urdf/: segway.urdf
segway_msgs/: CMakeLists.txt  README.md
segway_msgs/msg/: Errorcodefb.msg
segway_msgs/srv/: ChassisSendEvent.srv  RosClearChassisErrorCodeCmd.srv  RosGetChassisRotateSwitchCmd.srv  RosGetHostAndChassisMatchCmd.srv  RosGetLoadParamCmd.srv  RosGetSwVersionCmd.srv  RosResetHostPowerCmd.srv  RosSetCfgRotateFunctionCmd.srv  RosSetChassisPoweroffCmd.srv  RosSetLoadParamCmd.srv  RosSetVelMaxCmd.srv  RosStartChassisRightRotateCmd.srv  RosStopChassisRotateCmd.srv
segwayrmp/: CMakeLists.txt  README.md  convert.sh  package.xml
segwayrmp/include/: Ge_encoder_odometry.h  Ge_encoder_sensordata.h  comm_ctrl_navigation.h
segwayrmp/include/segwayrmp/: Odometry.h  robot.h
segwayrmp/lib/: ctrl_arm64-v8a  ctrl_x86_64
segwayrmp/src/: Ge_encoder_odometry.cpp  SmartCar.cpp  robot.cpp
segwayrmp/tools/: drive_segway_sample.cpp
(+379 files in other folders)
